--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dbqt"
-version = "0.1.1"
+version = "0.1.3"
 description = "DataBase Quality Tool"
 authors = ["NamiLink"]
 license = "MIT"
@@ -32,6 +32,8 @@ sqeleton = "0.1.7"
 polars = "^0.20.1"
 openpyxl = "^3.1.2"
 pyyaml = "^6.0.1"
+reladiff = "^0.5.0"
+boto3 = "^1.28.30"
 
 [tool.poetry.scripts]
 dbqt = "dbqt.app:main"
