--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dbqt"
-version = "0.1.4"
+version = "0.1.5"
 description = "DataBase Quality Tool"
 authors = ["NamiLink"]
 license = "MIT"
@@ -28,12 +28,13 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-sqeleton = "0.1.7"
+sqeleton = {extras = ["mysql", "postgresql", "snowflake"], version = "^0.1.7"}
 polars = "^0.20.1"
 openpyxl = "^3.1.2"
 pyyaml = "^6.0.1"
 reladiff = "^0.5.0"
 boto3 = "^1.28.30"
+pyarrow = "^19.0.1"
 
 [tool.poetry.scripts]
 dbqt = "dbqt.app:main"
