--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
-[tool.poetry]
+[project]
 name = "dbqt"
 version = "0.1.5"
 description = "DataBase Quality Tool"
-authors = ["NamiLink"]
-license = "MIT"
+authors = [
+    { name = "NamiLink" }
+]
+license = { text = "MIT" }
 readme = "README.md"
-repository = "https://github.com/namilinklabs/dbqt"
-documentation = "https://github.com/namilinklabs/dbqt"
+requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -19,31 +20,29 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "sqeleton[mysql,postgresql,snowflake]>=0.1.7",
+    "polars>=1.25.2",
+    "openpyxl>=3.1.2",
+    "pyyaml>=6.0.1",
+    "reladiff>=0.6.0",
+    "boto3>=1.28.30",
+    "pyarrow>=18.1.0",
+]
 
-packages = [{include = "dbqt"}]
+[project.urls]
+Repository = "https://github.com/namilinklabs/dbqt"
+Documentation = "https://github.com/namilinklabs/dbqt"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-sqeleton = {extras = ["mysql", "postgresql", "snowflake"], version = "^0.1.7"}
-polars = "^0.20.1"
-openpyxl = "^3.1.2"
-pyyaml = "^6.0.1"
-reladiff = "^0.5.0"
-boto3 = "^1.28.30"
-pyarrow = "^19.0.1"
-
-[tool.poetry.scripts]
+[project.scripts]
 dbqt = "dbqt.app:main"
 
-[tool.poetry.group.dev.dependencies]
-pytest = "*"
-pytest-cov = "*"
-build = "*"
-twine = "*"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["dbqt"]
 
 [tool.pytest]
 testpaths = ["tests"]
@@ -52,4 +51,10 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v"
 
-
+[dependency-groups]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "build",
+    "twine",
+]
